# dacmodel

./: .gitignore  Makefile.am  configure.ac
dsp/: Makefile.am  is_prime.cpp  is_prime.hpp  mash3.cpp  mash3.hpp
first/: Makefile.am  linearity.gnuplot  mash3.cpp  mash3_linearity.cpp  mash3_single_and_multi_modulus.cpp  mash3_spectrum.cpp  mash3_varying_modulus.cpp  next_prime_below.cpp  spectrum.gnuplot
