noinst_LTLIBRARIES = lib_dacmodel_dsp.la

lib_dacmodel_dsp_la_CFLAGS = \
	$(FFTW3_CFLAGS)

lib_dacmodel_dsp_la_CPPFLAGS = \
	$(FFTW3_CPPFLAGS)

lib_dacmodel_dsp_la_LIBADD = \
	$(FFTW3_LIBS)

lib_dacmodel_dsp_la_LDFLAGS = \
	-no-undefined

lib_dacmodel_dsp_la_SOURCES = \
	mash3.cpp \
	is_prime.cpp

noinst_HEADERS = \
	mash3.hpp \
	is_prime.hpp
