bin_PROGRAMS = \
  mash3_single_and_multi_modulus \
  mash3_varying_modulus \
  next_prime_below

CFLAGS = $(DACMODEL_CFLAGS)

CPPFLAGS = $(DACMODEL_CPPFLAGS)

LDADD = ../dsp/lib_dacmodel_dsp.la

mash3_single_and_multi_modulus_SOURCES = \
  mash3_single_and_multi_modulus.cpp

mash3_varying_modulus_SOURCES = \
  mash3_varying_modulus.cpp

next_prime_below_SOURCES = \
  next_prime_below.cpp
